Cosmetics. Fixed wrong horizontal scrolling on mobile.

--- a/assets/css/creative.css
+++ b/assets/css/creative.css
@@ -9,10 +9,9 @@ body {
     width: 100%;
     height: 100%;
     font-size: 16px;
-    font-family: Merriweather,'Helvetica Neue',Arial,sans-serif;
+    font-family: 'Open Sans','Helvetica Neue', Arial, sans-serif;
     line-height: 1.42857143;
     color: #333;
-    overflow-x: hidden;
 }
 
 hr {
@@ -159,108 +158,6 @@ li {
   margin-top: 0.4em;
   color: #888;
   font-size: 14px;
-}
-
-.temporary {
-  width: 12.1em;
-  height: 12.1em;
-  position: absolute;
-  overflow: hidden;
-  top: 0;
-  right: 0;
-  z-index: 9999;
-  pointer-events: none;
-  font-size: 13px;
-  text-decoration: none;
-  text-indent: -999999px;
-}
-
-.temporary.fixed {
-  position:fixed;
-  top: 0;
-  z-index: 999;
-}
-
-.temporary:before, .temporary:after {
-  /* The right and left classes determine the side we attach our banner to */
-  position: absolute;
-  display: block;
-  width: 15.38em;
-  height: 1.54em;
-
-  top: 3.23em;
-  right: -3.23em;
-
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-.temporary:before {
-  content: "";
-
-  /* Add a bit of padding to give some substance outside the "stitching" */
-  padding: .38em 0;
-
-  /* Set the base colour */
-  background-color: #a00;
-
-  /* Set a gradient: transparent black at the top to almost-transparent black at the bottom */
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.15)));
-  background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15));
-  background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15));
-  background-image: -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15));
-  background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15));
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15));
-
-  /* Add a drop shadow */
-  -webkit-box-shadow: 0 .15em .23em 0 rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: 0 .15em .23em 0 rgba(0, 0, 0, 0.5);
-  box-shadow: 0 .15em .23em 0 rgba(0, 0, 0, 0.5);
-
-  pointer-events: auto;
-}
-
-.temporary:after {
-  /* Set the text from the data-ribbon attribute */
-  content: attr(text);
-
-  /* Set the text properties */
-  color: #fff;
-  font: 700 1em "Helvetica Neue", Helvetica, Arial, sans-serif;
-  line-height: 1.54em;
-  text-decoration: none;
-  text-shadow: 0 -.08em rgba(0, 0, 0, 0.5);
-  text-align: center;
-  text-indent: 0;
-
-  /* Set the layout properties */
-  padding: .15em 0;
-  margin: .15em 0;
-}
-
-.temporary .lefttop {
-  right: auto;
-  left: 0;
-}
-
-.temporary.lefttop:before, .temporary.lefttop:after {
-  right: auto;
-  left: -3.23em;
-}
-
-.github-fork-ribbon.left-top:before, .github-fork-ribbon.left-top:after {
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  transform: rotate(-45deg);
 }
 
 .bg-primary {
@@ -634,74 +531,6 @@ header .header-content .header-content-inner p {
   background-color: #666;
 }
 
-.service-box {
-    margin: 50px auto 0;
-    max-width: 400px;
-}
-
-@media(min-width:992px) {
-    .service-box {
-        margin: 20px auto 0;
-    }
-}
-
-.service-box p {
-    margin-bottom: 0;
-}
-
-.portfolio-box {
-    display: block;
-    position: relative;
-    margin: 0 auto;
-    max-width: 650px;
-}
-
-.portfolio-box .portfolio-box-caption {
-    display: block;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    color: #fff;
-    opacity: 0;
-    background: #ffa800ef;
-    -webkit-transition: all .35s;
-    -moz-transition: all .35s;
-    transition: all .35s;
-}
-
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    text-align: center;
-    transform: translateY(-50%);
-}
-
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
-    padding: 0 15px;
-    font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
-}
-
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
-    text-transform: uppercase;
-    font-size: 14px;
-    font-weight: 600;
-}
-
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
-    font-size: 18px;
-}
-
-.portfolio-box:hover .portfolio-box-caption {
-    opacity: 1;
-}
-
-.call-to-action h2 {
-    margin: 0 auto 20px;
-}
 
 .text-primary {
     color: #666666;
